{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 24,
  "lineage": "96e653cb-3470-83f9-9fe5-e68dc8b99b57",
  "resources": [
    {
      "module": "module.aks_networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e3db8dda-1544-4d60-8384-3cd2e7b5219b/resourceGroups/aks-resources/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "uksouth",
            "name": "aks-nsg",
            "resource_group_name": "aks-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aks_networking.azurerm_resource_group.aks"
          ]
        }
      ]
    },
    {
      "module": "module.aks_networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e3db8dda-1544-4d60-8384-3cd2e7b5219b/resourceGroups/aks-resources/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "aks-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "aks-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aks_networking.azurerm_network_security_group.aks_nsg",
            "module.aks_networking.azurerm_resource_group.aks"
          ]
        }
      ]
    },
    {
      "module": "module.aks_networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e3db8dda-1544-4d60-8384-3cd2e7b5219b/resourceGroups/aks-resources/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/allow-https",
            "name": "allow-https",
            "network_security_group_name": "aks-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "aks-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aks_networking.azurerm_network_security_group.aks_nsg",
            "module.aks_networking.azurerm_resource_group.aks"
          ]
        }
      ]
    },
    {
      "module": "module.aks_networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_node_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "30000-32767",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e3db8dda-1544-4d60-8384-3cd2e7b5219b/resourceGroups/aks-resources/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/allow-node-ports",
            "name": "allow-node-ports",
            "network_security_group_name": "aks-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "aks-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aks_networking.azurerm_network_security_group.aks_nsg",
            "module.aks_networking.azurerm_resource_group.aks"
          ]
        }
      ]
    },
    {
      "module": "module.aks_networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e3db8dda-1544-4d60-8384-3cd2e7b5219b/resourceGroups/aks-resources/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/aks-subnet",
            "name": "aks-subnet",
            "resource_group_name": "aks-resources",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.aks_networking.azurerm_resource_group.aks",
            "module.aks_networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.aks_networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7487b4e8-a475-4e89-a9d0-a8474b75b65f",
            "id": "/subscriptions/e3db8dda-1544-4d60-8384-3cd2e7b5219b/resourceGroups/aks-resources/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "uksouth",
            "name": "aks-vnet",
            "resource_group_name": "aks-resources"
          },
          "dependencies": [
            "module.aks_networking.azurerm_resource_group.aks"
          ]
        }
      ]
    }
  ]
}